src/test/deca/syntax/invalid/our_synt_tests/robin-test6-elseElse.deca
// Error: else statement directly after else statement

boolean a = true;
{
if(a)
{
println("Here is OK");
}
else {}
else {} //mistake here
}
